--- a/po/es.pot
+++ b/po/es.pot
@@ -8,18 +8,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-07-02 11:45+0200\n"
+"POT-Creation-Date: 2015-01-14 16:52-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: activity/activity.info:2
-msgid "HelloWorld"
-msgstr ""
+#: homeworkviewer.py:88
+msgid "OK"
+msgstr "OK"
 
-#: /home/erikos/Activities/HelloWorld.activity/activity.py:36
-msgid "Hello World!"
-msgstr ""
+#: homeworkviewer.py:149
+msgid "Back"
+msgstr "Anterior"
+
+#: homeworkviewer.py:154
+msgid "Next"
+msgstr "Siguiente"
