--- a/po/es.po
+++ b/po/es.po
@@ -8,23 +8,26 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-01-14 16:52-0300\n"
+"POT-Creation-Date: 2015-01-14 16:01-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.5\n"
+"X-Poedit-Language: Spanish\n"
 
 #: homeworkviewer.py:88
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: homeworkviewer.py:149
 msgid "Back"
-msgstr ""
+msgstr "Anterior"
 
 #: homeworkviewer.py:154
 msgid "Next"
-msgstr ""
+msgstr "Siguiente"
